@@ -29,6 +29,13 @@ function cf7bs_captcha_shortcode_handler( $tag ) {
 	$validation_error = wpcf7_get_validation_error( $tag_obj->name );
 
 	if ( 'captchac' == $tag_obj->type ) {
+		$size = cf7bs_get_form_property( 'size' );
+		if ( ! preg_grep( '%^size:[smlSML]$%', $tag['options'] ) ) {
+			$size = cf7bs_get_form_property( 'size' );
+			$image_size = 'large' == $size ? 'l' : ( 'small' == $size ? 's' : 'm' );
+			$tag['options'][] = 'size:' . $image_size;
+		}
+
 		$field = new CF7BS_Form_Field( array(
 			'name'				=> wpcf7_captcha_shortcode_handler( $tag ),
 			'type'				=> 'custom',
@@ -68,6 +75,20 @@ function cf7bs_captcha_shortcode_handler( $tag ) {
 			$value = '';
 		}
 
+		$input_before = $input_after = '';
+		if ( $tag_obj->has_option( 'include_captchac' ) && class_exists( 'ReallySimpleCaptcha' ) ) {
+			$captchar_mode = $tag_obj->get_option( 'include_captchac', '[A-Za-z]+', true );
+			if ( $captchar_mode && strtolower( $captchar_mode ) == 'after' ) {
+				$captchar_mode = 'input_after';
+			} else {
+				$captchar_mode = 'input_before';
+			}
+
+			$tag = cf7bs_captchar_to_captchac( $tag );
+
+			$$captchar_mode = wpcf7_captcha_shortcode_handler( $tag );
+		}
+
 		$field = new CF7BS_Form_Field( array(
 			'name'				=> $tag_obj->name,
 			'id'				=> $tag_obj->get_option( 'id', 'id', true ),
@@ -86,6 +107,10 @@ function cf7bs_captcha_shortcode_handler( $tag ) {
 			'maxlength'			=> $tag_obj->get_maxlength_option(),
 			'tabindex'			=> $tag_obj->get_option( 'tabindex', 'int', true ),
 			'wrapper_class'		=> $tag_obj->name,
+			'input_before'		=> $input_before,
+			'input_after'		=> $input_after,
+			'input_before_class'=> 'input-group-addon input-group-has-image',
+			'input_after_class'	=> 'input-group-addon input-group-has-image',
 		) );
 
 		$html = $field->display( false );
@@ -94,4 +119,67 @@ function cf7bs_captcha_shortcode_handler( $tag ) {
 	}
 
 	return '';
+}
+
+function cf7bs_captchar_to_captchac( $tag ) {
+	$tag['type'] = 'captchac';
+	$tag['basetype'] = 'captchac';
+	$tag['options'] = array();
+
+	$size = cf7bs_get_form_property( 'size' );
+	$image_size = 'large' == $size ? 'l' : ( 'small' == $size ? 's' : 'm' );
+	$tag['options'][] = 'size:' . $image_size;
+
+	return $tag;
+}
+
+function cf7bs_captchar_has_captchac( $tag ) {
+	$pattern = sprintf( '/^%s(:.+)?$/i', preg_quote( 'include_captchac', '/' ) );
+	return (bool) preg_grep( $pattern, $tag['options'] );
+}
+
+add_filter( 'wpcf7_ajax_onload', 'cf7bs_captcha_ajax_refill', 11 );
+add_filter( 'wpcf7_ajax_json_echo', 'cf7bs_captcha_ajax_refill', 11 );
+
+function cf7bs_captcha_ajax_refill( $items ) {
+	if ( ! is_array( $items ) ) {
+		return $items;
+	}
+
+	$fes = wpcf7_scan_shortcode( array( 'type' => 'captchar' ) );
+
+	if ( empty( $fes ) ) {
+		return $items;
+	}
+
+	$refill = array();
+
+	foreach ( $fes as $fe ) {
+		if ( cf7bs_captchar_has_captchac( $fe ) ) {
+			$fe = cf7bs_captchar_to_captchac( $fe );
+
+			$name = $fe['name'];
+			$options = $fe['options'];
+
+			if ( empty( $name ) ) {
+				continue;
+			}
+
+			$op = wpcf7_captchac_options( $options );
+			if ( $filename = wpcf7_generate_captcha( $op ) ) {
+				$captcha_url = wpcf7_captcha_url( $filename );
+				$refill[ $name ] = $captcha_url;
+			}
+		}
+	}
+
+	if ( count( $refill ) > 0 ) {
+		if ( ! isset( $items['captcha'] ) ) {
+			$items['captcha'] = $refill;
+		} else {
+			$items['captcha'] = array_merge( $items['captcha'], $refill );
+		}
+	}
+
+	return $items;
 }
