@@ -3,6 +3,8 @@
 = 1.2.1 =
 * Enhanced: the default grid column count of Bootstrap can now be overridden using the form property 'grid_columns'
 * Enhanced: the submit button now supports a 'size' option to override the general form control size
+* Enhanced: the captchar shortcode now supports an 'include_captchac' option to display the captcha image inline with the input field
+* Tweaked: captcha images now have their image size adjusted to the 'size' form property by default
 
 = 1.2.0 =
 * Added: new CF7 count shortcode is now supported
